MediaWiki theme: Fix ToolGroupTool's label alignment
Removing `line-height` leftovers from Apex theme approach as
MediaWiki positioning is different and doesn't need them.

--- a/src/themes/mediawiki/tools.less
+++ b/src/themes/mediawiki/tools.less
@@ -76,12 +76,6 @@
 				width: 1.875em;
 			}
 		}
-
-		&.oo-ui-labelElement > .oo-ui-popupToolGroup-handle {
-			.oo-ui-labelElement-label {
-				line-height: 2.1;
-			}
-		}
 	}
 }
 
@@ -272,11 +266,6 @@
 			height: 2.5em;
 			width: 1.875em;
 			min-width: 1.875em;
-		}
-
-		.oo-ui-tool-title,
-		.oo-ui-tool-accel {
-			line-height: 2;
 		}
 
 		.oo-ui-tool-title {
